# eve-anom-tracker

./: .gitattributes  .gitignore  README.md  index.html  metadata.json  package-lock.json  package.json  solar_systems.json  vite.config.ts
.agent/instructions/: git_guidelines.md
.agent/workflows/: commit.md
.github/workflows/: release.yml
src/: App.tsx  Settings.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
