[package]
name = "anomtracker"
version = "0.1.2"
description = "A lightweight desktop app for EVE Online Anomaly Tracking"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.10.1", features = [] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2.3.2", features = ["sqlite"] }
tauri-plugin-window-state = "2.0.0"
tauri-plugin-fs = "2.4.5"
tauri-plugin-dialog = "2.6.0"
zip = "2.2.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = ["Win32_Graphics_Dwm", "Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
